[project]
name = "glide-paths"
version = "0.1.0"
description = "Interactive visualization tool for investment risk glide path strategies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "streamlit",
]

[project.scripts]
glide-paths = "app:main"
